oss/traefik-2-dashboard.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oss-dashboard-traefik
  namespace: traefik-2
  annotations:
    kubernetes.io/ingress.class: traefik-2
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`oss.2.${CLUSTERNAME}.${DOMAINNAME}`)
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    certResolver: le
